updated docs for contribution

--- a/docs/installation.mdx
+++ b/docs/installation.mdx
@@ -11,6 +11,13 @@ Before installing, make sure your computer meets the following requirements:
 - Python 3.10 or higher
 
 
+## One Line Installer (Experimental)
+
+```bash
+curl https://raw.githubusercontent.com/neokd/NeoGPT/main/installers/install.sh -o install.sh && bash install.sh
+```
+
+
 ## Install with `pip`
 
 Clone the repository and install the dependencies:
@@ -29,7 +36,7 @@ cd NeoGPT
 3. Install the dependencies
 
 ```bash
-pip install -e .
+pip install -r requirements.txt
 ```
 
 
