--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -18,7 +18,7 @@ You can chat with NeoGPT through an ChatGPT like interface in your terminal by r
 </Card>
 
 <Card title="LLM Versatility" icon="brain" href="">
-    NeoGPT supports Ollama, open-source, Hugging Face, and OpenAI models, offering a universe of language model options in one system. 🌐💡🚀
+    NeoGPT supports Ollama, Open Source, Hugging Face, and OpenAI models, offering a universe of language model options in one system. 🌐💡🚀
 </Card>
 
 </CardGroup>
