--- a/docs/installation.mdx
+++ b/docs/installation.mdx
@@ -40,26 +40,4 @@ pip install -r requirements.txt
 ```
 
 
-
-
-
-## Terminal Usage
-
-<Tip>
-    If you are running the program first time add `--build` flag to the command. This will build the vector database.
-</Tip>
-
-After installion, you can start a chat with the following command:
-
-```bash
-python main.py
-```
-
-
-## GUI Usage
-
-To start the GUI, run the following command:
-
-```bash
-python main.py --ui
-```
+Read the [Quick Start](/guides/quick-start) guide to get started with NeoGPT.
