updated docs with settings

--- a/docs/guides/quick-start.mdx
+++ b/docs/guides/quick-start.mdx
@@ -110,6 +110,6 @@ You can add websites to the vector store you can add the urls to `builder.url` f
 https://neokd.github.io/NeoGPT/
 ```
 <Tip>
-You can add `--recurisive` flag to the `--build` command to recursively scrapes all the links in the `builder.url` file.
+You can add `--recursive` flag to the `--build` command to recursively scrapes all the links in the `builder.url` file.
 </Tip>
 
