Fix:huggingface loading model

--- a/docs/guides/quick-start.mdx
+++ b/docs/guides/quick-start.mdx
@@ -29,13 +29,10 @@ To get started with NeoGPT, make sure you have completed the [installation](http
 
     Once the model is loaded, you will see the following prompt:
 
-    ```bash Terminal
-    Using Llamacpp to load TheBloke/Mistral-7B-Instruct-v0.2-GGUF.
-
-    NeoGPT 🤖 is ready to chat. Type /exit to quit.
-
-    You 🙋‍♂️ : 
-    ```
+    <img
+  style={{ borderRadius: '0.5rem', justifySelf: 'center', width: '100%'}}
+  src="../assets/quick-start-terminal.png"
+/>
   </Step>
 </Steps>
 
