--- a/docs/language-models/local-models/huggingface.mdx
+++ b/docs/language-models/local-models/huggingface.mdx
@@ -3,9 +3,7 @@ title: Hugging Face
 description: ""
 ---
 
-<Warning>
-    Heads up! Using Hugging Face to load models is generally not advised unless you have higher RAM capabilities. Check [here](/language-models/introduction) for more information.
-</Warning>
+
 
 
 Hugging Face is a popular open-source library. It provides a large number of pre-trained models for a variety of tasks. To use HuggingFace models with NeoGPT, you can run the following command:
@@ -14,10 +12,17 @@ Hugging Face is a popular open-source library. It provides a large number of pre
 python main.py --model hf/<model-name>
 ```
 
-where `<model-name>` is the name of the model you want to use. For example, to use the `TinyLlama/TinyLlama-1.1B-Chat-v1.0` model, you can run:
+Where `<model-name>` is the name of the model you want to use. For example, to use the `TinyLlama/TinyLlama-1.1B-Chat-v1.0` model, you can run:
 
 ```bash
 python main.py --model hf/TinyLlama/TinyLlama-1.1B-Chat-v1.0
 ```
 
+## Supported Models
+
 You can find a list of all available models [here](https://huggingface.co/models?pipeline_tag=text-generation&sort=downloads).
+
+
+<Warning>
+    Using Hugging Face to load models is generally not advised unless you have higher RAM capabilities. Check [here](/language-models/introduction) for more information.
+</Warning>
