--- a/docs/guides/quick-start.mdx
+++ b/docs/guides/quick-start.mdx
@@ -17,6 +17,10 @@ To get started with NeoGPT, make sure you have completed the [installation](http
     python main.py --build
     ```
   </Step>
+  <Step title="Update the .env-template file">
+    The `.env-template` file contains the environment variables that are used by NeoGPT. Edit the file as per your requirements.\
+    Read [OpenAI API Key Guide](/guides/setup-openai-key) on how to get the OpenAI API key.
+  </Step>
   <Step title="Run NeoGPT">
     Once the vector store is built, you can run NeoGPT. In the CLI using the following command:
 
