updated docs and openai settings

--- a/docs/guides/setup-openai-key.mdx
+++ b/docs/guides/setup-openai-key.mdx
@@ -19,8 +19,11 @@ description: "Learn how to set up your OpenAI API key to use it with NeoGPT"
 	</Step>
 	<Step index="4" title="Copy API Key">
 		Copy the API key that is generated for you. You will need this key to use the OpenAI API with NeoGPT.
+		<Info>
+			Copy the key to a safe place as you will not be able to see it again.
+		</Info>
 	</Step>
 	<Step index="5" title="Adding API Key to NeoGPT">
-		Open the `.env-template` file or your `.env` file in the root directory of your NeoGPT project and update the `OPENAI_API_KEY` variable with the API key you copied earlier.
+		Open the `.env-template` file and rename it to `.env` file and update the `OPENAI_API_KEY` variable with the API key you copied earlier.
 	</Step>
 </Steps>
