--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -2,6 +2,40 @@
 title: Introduction 🤖
 description: 'A new way to chat effortlessly with documents, youTube videos,code, and social chats.'
 ---
+# NeoGPT Documentation
+
+Introduction:-
+
+Welcome to NeoGPT, a powerful language model designed for various natural language processing tasks. Whether you're looking to use offline models for local processing or hosted models for cloud-based applications, NeoGPT has you covered.
+
+NeoGPT is built on the GPT-3.5 architecture, offering state-of-the-art language understanding and generation capabilities. This documentation aims to guide you through the usage of NeoGPT, helping you make informed decisions based on your specific needs.
+
+Offline Models:-
+
+Offline models are designed for local processing, allowing you to run NeoGPT on your own machine without the need for an internet connection. These models provide flexibility and privacy, making them suitable for a range of applications.
+
+Available Offline Models:-
+
+1. NeoGPT-Base-Local:
+   - Description: Base model for general language understanding and generation.
+   - Usage: Ideal for local applications where internet access is limited.
+
+2. NeoGPT-FineTuned-Local:
+   - Description: Fine-tuned for specific tasks or industries.
+   - Usage: Tailored for specialized use cases such as legal documents, medical reports, etc.
+
+ Hosted Models:-
+
+Hosted models offer the convenience of cloud-based processing, making them suitable for applications that require internet connectivity. These models are accessible via API, providing seamless integration into your web or mobile applications.
+ Available Hosted Models
+
+1. NeoGPT-Base-Hosted:-
+   - Description: Base model for general language understanding and generation.
+   - Usage: Suitable for cloud-based applications where internet access is available.
+
+2. NeoGPT-FineTuned-Hosted:-
+   - Description: Fine-tuned for specific tasks or industries.
+   - Usage: Integrated into web platforms requiring specialized language processing.
 
 
 
