updated with together AI and docs

--- a/docs/guides/setup-openai-key.mdx
+++ b/docs/guides/setup-openai-key.mdx
@@ -26,4 +26,7 @@ description: "Learn how to set up your OpenAI API key to use it with NeoGPT"
 	<Step index="5" title="Adding API Key to NeoGPT">
 		Open the `.env-template` file and rename it to `.env` file and update the `OPENAI_API_KEY` variable with the API key you copied earlier.
 	</Step>
+	<Step index="6" title="Ready to Rock">
+		You are now ready to use the OpenAI API with NeoGPT. 
+	</Step>
 </Steps>
