--- a/docs/language-models/introduction.mdx
+++ b/docs/language-models/introduction.mdx
@@ -1,18 +1,23 @@
 ---
 title: Introduction to LLMs
-description: "A curated guide to choose between local and hosted large language models.📖"
 ---
+
+**NeoGPT** works with both local and hosted language models. 
+
+Local models are stored on your device and can be used offline. They are limited by the resources available on your device.
+
+Hosted models offer speed and capability with payment requirements, accessible from anywhere and not constrained by local device resources.
 
 <CardGroup>
 
-<Card title="Local Models" icon="computer" href="/docs/language-models/local-models">
+<Card title="Local Models" icon="Computer" href="/language-models/local-models">
     <p>
     NeoGPT currently supports Hugging Face, LLama CPP, LM Studio and Ollama as the local models for use.
     Local models allow you to chat with local files, youtube videos offline in any environment. You can choose any of the available models based on your preference and usecase.
     </p>
 </Card>
 
-<Card title="Hosted Models" icon="brain" href="/docs/language-models/hosted-models">
+<Card title="Hosted Models" icon="cloud" href="/language-models/hosted-models">
      <p>
      NeoGPT also supports OpenAI and TogetherAI as hosted models.
      You can use the OpenAI GPT models to perform customised tasks on pdfs and youtube videos while TogetherAI offers real-time interaction with NeoGPT, thus bringing dynamic conversations to the table.🚀
@@ -20,3 +25,4 @@ description: "A curated guide to choose between local and hosted large language 
 </Card>
 
 </CardGroup>
+
