updated magic command /redo

--- a/docs/guides/magic-commands.mdx
+++ b/docs/guides/magic-commands.mdx
@@ -1,6 +1,8 @@
-# Magic Commands 🪄
+---
+title: Magic Commands 🪄
+---
 
-The `magic_commands.py` file contains a set of special commands that can be used during chat sessions. These commands, referred to as "magic commands" 🪄, provide additional functionalities:
+Magic commands are special commands that are inspired by discord bots. They are used to perform various actions during the chat session. Magic commands are prefixed with a `/` character.  Here is a list of available magic commands:
 
 - `/reset` 🔄: This command resets the chat session. It clears the chat memory and starts a new session.
 
