--- a/docs/code-execution/introduction.mdx
+++ b/docs/code-execution/introduction.mdx
@@ -1,5 +1,19 @@
 ---
 title: Introduction
-description: "🚧 Our documentation is currently under construction! We're working hard to bring you the best information.Contributions are welcome! 🚧"
 ---
 
+The NeoGPT Interpreter is like a ChatGPT's code interpreter. It can run code in python and bash It is built to run code in your local environment. It is a highly experimental feature and should be used with caution. It is not recommended to run untrusted code with the interpreter.
+
+Interpreter is work in progress and is not yet fully functional. We are working on adding more features and improving the interpreter. If you have any suggestions or feedback, please let us know.
+
+Here is an example of how to use the interpreter:
+
+```bash
+python main.py --interpreter
+```
+
+It will ask you whether you want to run the code or not. If you want to override and execute the code always then you can use the `-y` flag.
+
+```bash
+python main.py --interpreter -y
+```
