--- a/docs/guides/magic-commands.mdx
+++ b/docs/guides/magic-commands.mdx
@@ -1,5 +1,5 @@
 ---
-title: Magic Commands 🪄
+title: Magic Commands 
 ---
 
 Magic commands are special commands that are inspired by discord bots. They are used to perform various actions during the chat session. Magic commands are prefixed with a `/` character.  Here is a list of available magic commands:
@@ -17,6 +17,14 @@ Magic commands are special commands that are inspired by discord bots. They are 
 - `/undo` ↩️: This command removes the last response from the chat history.
 
 - `/redo` 🔁: This command resends the last human input to the model.
+
+- `/load` 🍞: This command loads the saved chat history from a specific file.
+
+- `/tokens {prompt}` 🎟️: This command displays number of tokens for a given prompt
+
+- `/export` 📤: This command exports a current used settings by NeoGPT.
+
+- `/conversations` 🗣️: This command displays the list of available conversations.
 
 - `/help` ❓: This command displays a help message with the list of available commands.
 
