--- a/docs/guides/multi-modal.mdx
+++ b/docs/guides/multi-modal.mdx
@@ -1,5 +1,5 @@
 ---
-title: Multi Modal Support 👀
+title: Multi Modal Support 
 ---
 
 NeoGPT now supports multi-modal inputs! 🎉 via Ollama. To start with multi-modal make sure you have ollama running in your system. Refer [here](/language-models/local-models/ollama) on how to run ollama.
