--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction 🤖
-description: 'A new way to chat effortlessly with documents, youTube videos,code, and social chats.'
+description: 'A new way to chat effortlessly with documents, youtube videos,code, and social chats.'
 ---
 
 
@@ -13,12 +13,20 @@ You can chat with NeoGPT through an ChatGPT like interface in your terminal by r
 ## Features
 <CardGroup>
 
+<Card title="Code Interpreter" icon="terminal">
+    Execute code seamlessly in your local environment with our Code Interpreter. Enjoy the convenience of real-time code execution, all within your personal workspace.
+</Card>
+
 <Card title="RAG Magic" icon="computer" href="">
-    NeoGPT brings Question Answering to local files and YouTube videos with RAG. Your documents just gets chatty! 📂🎥🧠
+    Unlock the power of Question Answering for local files and YouTube videos with RAG. Your documents come to life with dynamic conversations! 📂🎥🧠
+</Card>
+
+<Card title="Vision" icon="eye" href="">
+    Explore a new dimension as NeoGPT supports vision models like bakllava and llava, enabling you to chat with images using Ollama. 🖼️👁️🧠
 </Card>
 
 <Card title="LLM Versatility" icon="brain" href="">
-    NeoGPT supports Ollama, Open Source, Hugging Face, and OpenAI models, offering a universe of language model options in one system. 🌐💡🚀
+    Dive into a universe of language model options with NeoGPT, supporting Ollama, Open Source, and OpenAI models all in one system. 🌐💡🚀
 </Card>
 
 </CardGroup>
