--- a/docs/installation.mdx
+++ b/docs/installation.mdx
@@ -17,7 +17,7 @@ Before installing, make sure your computer meets the following requirements:
 curl https://raw.githubusercontent.com/neokd/NeoGPT/main/installers/install.sh -o install.sh && bash install.sh
 ```
 
-
+## Install
 ## Install with `pip`
 
 Clone the repository and install the dependencies:
